force-app/main/default/objects/Quote/fields/AF_DiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>AF_DiscountAmount__c</fullName>
    <description>Sales Rep enters the discount as a numeric value here (not a percentage). AF_DiscountPercent__c derives the equivalent percentage automatically. The platform-standard AppliedDiscountAmount field is not available in this org, so this custom field is the discount entry point.</description>
    <label>Discount Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>