force-app/main/default/objects/Quote/fields/AF_DiscountApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_DiscountApprovalStatus__c</fullName>
    <description>Every discount routes via the DoA matrix — matrix/thresholds pending client.</description>
    <label>Discount Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>