force-app/main/default/objects/Quote/fields/AF_DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>AF_DiscountPercent__c</fullName>
    <description>Read-only, derived from AF_DiscountAmount__c (the numeric-value discount entry) over Subtotal. Sales Reps enter a discount amount, not a percentage - this displays the equivalent percentage automatically.</description>
    <formula>IF(Subtotal = 0, 0, AF_DiscountAmount__c / Subtotal)</formula>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>