force-app/main/default/objects/Quote/fields/AF_KeyloopSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopSyncStatus__c</fullName>
    <label>Keyloop Quotation Outcome Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>