force-app/main/default/objects/Quote/fields/AF_QuotationDocumentReference__c.field-meta.xml
<CustomField>
    <fullName>AF_QuotationDocumentReference__c</fullName>
    <label>Quotation Document Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>