force-app/main/default/objects/Quote/fields/AF_QuoteType__c.field-meta.xml
<CustomField>
    <fullName>AF_QuoteType__c</fullName>
    <description>Field, not record type — same document structure for both types unless layouts diverge.</description>
    <label>Quote Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Quotation</fullName>
            </value>
            <value>
                <fullName>Bank Quotation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>