force-app/main/default/objects/Quote/fields/AF_VINDisplay__c.field-meta.xml
<CustomField>
    <fullName>AF_VINDisplay__c</fullName>
    <description>Populated when in-stock, suppressed when non-stock, reissued on arrival. Populate via automation — not a stored formula (depends on linked Vehicle stock status).</description>
    <label>VIN Display</label>
    <length>17</length>
    <type>Text</type>
</CustomField>