force-app/main/default/objects/Quote/validationRules/AF_VR_Quote_DiscountNotNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_Quote_DiscountNotNegative</fullName>
    <active>true</active>
    <description>LFRDN-650: A negative discount is a surcharge and escapes approval entirely - AF_FL_Quote_SetDiscountApprovalStatus only fires when AF_DiscountAmount__c &gt; 0, so a negative value stamps no tier and raises no approval.</description>
    <errorConditionFormula>AF_DiscountAmount__c &lt; 0</errorConditionFormula>
    <errorMessage>A discount cannot be negative. To record a price increase, adjust the quote line pricing instead.</errorMessage>
</ValidationRule>